[gd_scene load_steps=24 format=3 uid="uid://de2me0flre225"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_fi3cu"]
[ext_resource type="Texture2D" uid="uid://bysm55af4fytu" path="res://sprites/shop.png" id="2_g3k05"]
[ext_resource type="Texture2D" uid="uid://dp2ugeapl7710" path="res://sprites/solar.png" id="2_lcpw3"]
[ext_resource type="Texture2D" uid="uid://bb1jq8rr06clk" path="res://sprites/hydro-power.png" id="3_gpyaw"]
[ext_resource type="Texture2D" uid="uid://df1pyxqf8euvn" path="res://sprites/windturbine.png" id="3_ooq4s"]
[ext_resource type="Texture2D" uid="uid://bck0goejrc26e" path="res://sprites/coal_power.png" id="5_4s3d7"]
[ext_resource type="Texture2D" uid="uid://c0hdr7flyhdtw" path="res://sprites/gas_power.png" id="7_i7k7g"]
[ext_resource type="AudioStream" uid="uid://tfmwghrwbavi" path="res://sound/cash-register-purchase-87313.mp3" id="8_uh26e"]
[ext_resource type="Texture2D" uid="uid://cdeinnrh1wqib" path="res://sprites/oil_power.png" id="8_xjrjd"]
[ext_resource type="AudioStream" uid="uid://b7dyoerw1gfy2" path="res://sound/error-126627.mp3" id="9_ltyuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w3jcr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6074k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbkll"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tue4i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bt1hp"]

[sub_resource type="Theme" id="Theme_spnmi"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_w3jcr")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_6074k")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_fbkll")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_tue4i")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_bt1hp")

[sub_resource type="LabelSettings" id="LabelSettings_ivymj"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_srhg0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tufnj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_272du"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7exh1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_11bn3"]

[sub_resource type="Theme" id="Theme_i51tm"]
VScrollBar/styles/grabber = SubResource("StyleBoxEmpty_srhg0")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxEmpty_tufnj")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxEmpty_272du")
VScrollBar/styles/scroll = SubResource("StyleBoxEmpty_7exh1")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_11bn3")

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fi3cu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_g3k05")

[node name="ScrollContainer_Green" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 106.0
offset_right = 191.0
offset_bottom = 358.0
theme = SubResource("Theme_spnmi")

[node name="VBoxContainer_Green" type="VBoxContainer" parent="ScrollContainer_Green"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect_Solar" type="TextureRect" parent="ScrollContainer_Green/VBoxContainer_Green"]
layout_mode = 2
texture = ExtResource("2_lcpw3")

[node name="Label" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Solar"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Solar Panel"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Solar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Solar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 11.0
offset_right = -8.0
offset_bottom = 42.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Solar"]
layout_mode = 0
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "10kWd"

[node name="TextureRect_Wind" type="TextureRect" parent="ScrollContainer_Green/VBoxContainer_Green"]
layout_mode = 2
texture = ExtResource("3_ooq4s")

[node name="Label" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Wind"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Wind Turbines"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Wind"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Wind"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/TextureRect_Wind"]
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "14.5MWd"

[node name="Hydroelectric" type="TextureRect" parent="ScrollContainer_Green/VBoxContainer_Green"]
layout_mode = 2
texture = ExtResource("3_gpyaw")

[node name="Label" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/Hydroelectric"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Hydroelectric"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/Hydroelectric"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Green/VBoxContainer_Green/Hydroelectric"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Green/VBoxContainer_Green/Hydroelectric"]
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "89MWd"

[node name="ScrollContainer_Red" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 378.0
offset_right = 190.0
offset_bottom = 634.0
theme = SubResource("Theme_i51tm")

[node name="VBoxContainer_Red" type="VBoxContainer" parent="ScrollContainer_Red"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect_Coal" type="TextureRect" parent="ScrollContainer_Red/VBoxContainer_Red"]
layout_mode = 2
texture = ExtResource("5_4s3d7")

[node name="Label" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Coal"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Coal Plant
"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Coal"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Coal"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Coal"]
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "12GWd"

[node name="Label_Coal" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Coal"]
layout_mode = 0
offset_left = 9.0
offset_top = 40.0
offset_right = 101.0
offset_bottom = 63.0
text = "13KTon/dag"

[node name="TextureRect_Gas" type="TextureRect" parent="ScrollContainer_Red/VBoxContainer_Red"]
layout_mode = 2
texture = ExtResource("7_i7k7g")

[node name="Label" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Gas"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Gas Plant
"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Gas"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Gas"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Gas"]
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "11.5GWd"

[node name="Label_Coal" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Gas"]
offset_left = 9.0
offset_top = 40.0
offset_right = 101.0
offset_bottom = 63.0
text = "5.2KTon/dag"

[node name="TextureRect_Oil" type="TextureRect" parent="ScrollContainer_Red/VBoxContainer_Red"]
layout_mode = 2
texture = ExtResource("8_xjrjd")

[node name="Label" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Oil"]
layout_mode = 1
offset_left = 7.0
offset_right = 94.0
offset_bottom = 23.0
text = "Oil Plant
"
label_settings = SubResource("LabelSettings_ivymj")

[node name="Button" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Oil"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -29.0
offset_right = -8.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 2
text = "100kr"

[node name="Button2" type="Button" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Oil"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = 41.0
grow_horizontal = 0
grow_vertical = 2
text = "Sell
"

[node name="Label_Power" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Oil"]
offset_left = 9.0
offset_top = 66.0
offset_right = 62.0
offset_bottom = 89.0
text = "7.2GWd"

[node name="Label_Coal" type="Label" parent="ScrollContainer_Red/VBoxContainer_Red/TextureRect_Oil"]
offset_left = 9.0
offset_top = 40.0
offset_right = 101.0
offset_bottom = 63.0
text = "5.7KTon/dag"

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_uh26e")

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ltyuj")
